fixed attack types matching

--- a/content/attacks/posts/2011-10-05-Bitcoin7.md
+++ b/content/attacks/posts/2011-10-05-Bitcoin7.md
@@ -6,7 +6,7 @@ entity-types:
   - Custodian
 attack-types:
   - Wallet Hack
-  - Web Infrastructure Attack
+  - Infrastructure Attack
 title: Bitcoin7 Hacked, Losing 5000 BTC
 ---
 
