--- a/content/attacks/posts/2012-07-16-BTC-e.md
+++ b/content/attacks/posts/2012-07-16-BTC-e.md
@@ -4,7 +4,7 @@ target-entities: BTC-e
 entity-types:
   - Custodian
   - Exchange
-attack-types: Web Infrastructure Attack
+attack-types: Infrastructure Attack
 title: BTC-e hacked, losing around 4,500 BTC
 ---
 
