--- a/content/attacks/posts/2012-09-19-Silk-Road.md
+++ b/content/attacks/posts/2012-09-19-Silk-Road.md
@@ -5,7 +5,7 @@ entity-types:
   - Darknet
   - Market
 attack-types: 
-  - Web Infrastructure Attack
+  - Infrastructure Attack
   - Race Condition Exploit
 title: "50,000 Bitcoin Wire Fraud: Record Cryptocurrency Seizure in U.S. History"
 ---
