--- a/content/attacks/posts/2014-02-28-MtGox.md
+++ b/content/attacks/posts/2014-02-28-MtGox.md
@@ -4,7 +4,7 @@ target-entities: MtGox
 entity-types:
   - Custodian
   - Exchange
-attack-types: Web Infrastructure Attack
+attack-types: Infrastructure Attack
 title: Mt. Gox hacked, losing over $450 million worth of Bitcoin
 ---
 
