--- a/content/attacks/posts/2016-08-02-Bitfinex.md
+++ b/content/attacks/posts/2016-08-02-Bitfinex.md
@@ -6,7 +6,7 @@ entity-types:
 - Custodian
 - Exchange
 attack-types: 
-- Web Infrastructure Attack
+- Infrastructure Attack
 title: "Bitfinex Hack Led To 119,756 Bitcoin Stolen"
 ---
 
