--- a/content/attacks/posts/2019-03-24-DragonEx.md
+++ b/content/attacks/posts/2019-03-24-DragonEx.md
@@ -4,7 +4,9 @@ target-entities: DragonEx
 entity-types:
   - Custodian
   - Exchange
-attack-types: Phishing
+attack-types:
+  - Phishing
+  - Private Key Leak
 title: "DragonEx Hacked for $7 Million"
 ---
 
