--- a/content/attacks/posts/2020-08-31-2gether.md
+++ b/content/attacks/posts/2020-08-31-2gether.md
@@ -2,9 +2,9 @@
 date: 2020-08-31
 target-entities: 2gether
 entity-types:
-    - Custodian
-    - Exchange
-attack-types: Web Infrastructure Attack
+  - Custodian
+  - Exchange
+attack-types: Infrastructure Attack
 title: 2gether hacked, losing over €1.183 million worth of cryptocurrencies
 ---
 
