--- a/content/attacks/posts/2023-02-01-BonqDAO.md
+++ b/content/attacks/posts/2023-02-01-BonqDAO.md
@@ -1,5 +1,5 @@
 ---
-date: 2023-02-02
+date: 2023-02-01
 target-entities: 
 - BonqDAO
 entity-types:
@@ -34,15 +34,17 @@ The attackers are unidentified.
 
 ## Losses
 
-~$120 million 
+~$120 million
+
+    - $108 million worth of 98,658,538 BEUR
+    - $12 million worth of 113,813,998 WALBT
 
 ## Timeline
 
-- **On February 1, 2023, 06:29:18 PM +UTC:**  The attacker [stakes](https://polygonscan.com/tx/0x31957ecc43774d19f54d9968e95c69c882468b46860f921668f2c55fadd51b19) 10 TRB tokens with the TellorFlex. On the same day, the attacker manipulates the $WALBT token value using the submitValue function, uses the inflated token value to borrow 100M BEUR, and then deflates the $WALBT token value to liquidate other users' collateral.
+- **February 1, 2023, 06:29:18 PM UTC:**  The attacker [stakes](https://polygonscan.com/tx/0x31957ecc43774d19f54d9968e95c69c882468b46860f921668f2c55fadd51b19) 10 TRB tokens with the TellorFlex. On the same day, the attacker [manipulates the $WALBT token value using the submitValue function](https://rekt.news/bonq-rekt/), uses the inflated token value to borrow 100M BEUR, and then deflates the $WALBT token value to liquidate other users' collateral.
 
-[source](https://rekt.news/bonq-rekt/)
 
 ## Security Failure Causes
 
-- **Instant Price Updates:** BonqDAO allowed [instantaneous](https://www.halborn.com/blog/post/explained-the-bonqdao-hack-february-2023) price updates, which left the protocol susceptible to exploitation. In this instance, the attacker was able to manipulate the price oracle to change the value of the $WALBT token.
+- **Lack of TWAP Oracles:** BonqDAO allowed [instantaneous](https://www.halborn.com/blog/post/explained-the-bonqdao-hack-february-2023) price updates, which left the protocol susceptible to exploitation. In this instance, the attacker was able to manipulate the price oracle to change the value of the $WALBT token.
 - **Lack of Oracle Diversity:** Relying on a single source for price data left BonqDAO vulnerable to this kind of attack. Had the protocol used multiple price sources, the attacker's manipulation would have been much less likely to succeed.
