exmo fixes and grammar checker debugging

--- a/content/attacks/posts/2021-12-21-Exmo.md
+++ b/content/attacks/posts/2021-12-21-Exmo.md
@@ -1,5 +1,5 @@
 ---
-date: 2021-12-21
+date: 2020-12-21
 target-entities: EXMO
 entity-types:
 - Exchange
@@ -10,22 +10,22 @@ title: "EXMO Exchange Hot Wallets Compromised: Approximately $10.5 Million Stole
 
 ## Summary
 
-On December 21, 2021, the attackers gained unauthorized access to the EXMO exchange's hot wallets. Through these security weaknesses, they managed to execute malicious transactions, resulting in the theft of a substantial amount of cryptocurrency. 
+On Dekember 21, 2020, the attackers [gained unauthorized access to the EXMO exchange's hot wallets](https://info.exmo.com/en/notifications/exmo-security-incident-update/). Through these security weaknesses, they managed to execute malicious transactions, resulting in the theft of a substantial amount of cryptocurrency. 
 
 ## Attackers
 
-The identities of the attackers remain undisclosed. The [following addresses was involved](https://info.exmo.com/en/notifications/exmo-security-incident-update/):
+The identities of attackers remain undisclosed. The [following addresses was involved](https://info.exmo.com/en/notifications/exmo-security-incident-update/):
 
 - [1A4PXZE5j8v7UuapYckq6fSegmY5i8uUyq](https://www.blockchain.com/explorer/addresses/btc/1A4PXZE5j8v7UuapYckq6fSegmY5i8uUyq)
 - [0x4BA6B2fF35055aF5406923406442cD3aB29F50Ce](https://etherscan.io/address/0x4BA6B2fF35055aF5406923406442cD3aB29F50Ce)
 - [qrfrw5q9gag2vp6jc5nlx0haplm2jlhx9vsvxd9u3e](https://www.blockchain.com/explorer/addresses/bch/qrfrw5q9gag2vp6jc5nlx0haplm2jlhx9vsvxd9u3e)
 - [t1StUQiw1YyHT515xDxwxjfhEcw2iGSq2yL](https://zcashblockexplorer.com/address/t1StUQiw1YyHT515xDxwxjfhEcw2iGSq2yL)
-- [rwU8rAiE2eyEPz3sikfbHuqCuiAtdXqa2v](https://xrpscan.com/account/rwU8rAiE2eyEPz3sikfbHuqCuiAtdXqa2v) Destination Tag: 2033412069
+- [rwU8rAiE2eyEPz3sikfbHuqCuiAtdXqa2v](https://xrpscan.com/account/rwU8rAiE2eyEPz3sikfbHuqCuiAtdXqa2v) Destination Tag: **2033412069**
 - [0x4d9EF6846126Da2867AF503448be0508542C971e](https://etcblockexplorer.com/address/0x4d9EF6846126Da2867AF503448be0508542C971e)
 
 ## Losses
 
-The EXMO security breach resulted the theft of around $10.5 million. The stolen funds are [distributed as follows](https://www.theblock.co/post/88692/crypto-exchange-exmo-hacked):
+The EXMO security bleach resulted the theft of around $10.5 million. The stolen funds are [distributed as follows](https://www.theblock.co/post/88692/crypto-exchange-exmo-hacked):
 
 - 306.98 BTC
 - 1,882.6 BCH
@@ -37,10 +37,13 @@ The EXMO security breach resulted the theft of around $10.5 million. The stolen 
 
 ## Timeline
 
-- **December 26, 2017**: Pavel Lerner, EXMO's lead analyst, was kidnapped in Kyiv. A group of unknown masked men snatched Lerner off the street. 
+- **December 26, 2017**: Pavel Lerner, EXMO's lead analyst, was kidnapped in Kyiv. [EXMO spokesman Anatoliy Larin commented](https://www.bbc.com/news/business-42505261):
+> We are doing everything possible to speed up the search for Pavel Lerner.
+> Despite the situation the exchange is working as usual. We also want to stress that nature of Pavel's job at Exmo doesn't assume access either to storages or any personal data of users. All users' funds are absolutely safe.
 - **December 28, 2017**: EXMO [experienced a targeted DDoS attack](https://www.ibtimes.co.uk/exmo-hack-uk-bitcoin-exchange-hit-ddos-attack-days-after-lead-analyst-was-kidnapped-1653141), temporarily shutting down its website.
 - **December 29, 2017**: [Pavel Lerner was freed after a $1 million ransom was paid](https://www.reuters.com/article/us-ukraine-kidnapping-idUSKBN1EN1QB), with no physical harm inflicted on him. 
-- **December 21, 2021, 02:27 AM UTC**: Hackers [gained access to EXMO's hot wallets](https://blog.merklescience.com/hacktrack/hack-track-exmo-hot-wallets) and transferred the funds under their control.
+- **December 21, 2020, 02:27 AM UTC**: Hackers [gained access to EXMO's hot wallets](https://blog.merklescience.com/hacktrack/hack-track-exmo-hot-wallets) and transferred the funds under their control.
+- **September 8, 2021**: EXMO [published a post-mortem](https://info.exmo.com/en/notifications/the-2020-exmo-security-incident-resolved/), mentioning that issues have been resolved.
 
 ## Security Failure Causes
 
