--- a/content/attacks/posts/2021-12-21-Exmo.md
+++ b/content/attacks/posts/2021-12-21-Exmo.md
@@ -10,11 +10,11 @@ title: "EXMO Exchange Hot Wallets Compromised: Approximately $10.5 Million Stole
 
 ## Summary
 
-On Dekember 21, 2020, the attackers [gained unauthorized access to the EXMO exchange's hot wallets](https://info.exmo.com/en/notifications/exmo-security-incident-update/). Through these security weaknesses, they managed to execute malicious transactions, resulting in the theft of a substantial amount of cryptocurrency. 
+On December 21, 2020, the attackers [gained unauthorized access to the EXMO exchange's hot wallets](https://info.exmo.com/en/notifications/exmo-security-incident-update/). Through these security weaknesses, they managed to execute malicious transactions, resulting in the theft of a substantial amount of cryptocurrency. 
 
 ## Attackers
 
-The identities of attackers remain undisclosed. The [following addresses was involved](https://info.exmo.com/en/notifications/exmo-security-incident-update/):
+The identities of the attackers remain undisclosed. The [following addresses were involved](https://info.exmo.com/en/notifications/exmo-security-incident-update/):
 
 - [1A4PXZE5j8v7UuapYckq6fSegmY5i8uUyq](https://www.blockchain.com/explorer/addresses/btc/1A4PXZE5j8v7UuapYckq6fSegmY5i8uUyq)
 - [0x4BA6B2fF35055aF5406923406442cD3aB29F50Ce](https://etherscan.io/address/0x4BA6B2fF35055aF5406923406442cD3aB29F50Ce)
@@ -25,7 +25,7 @@ The identities of attackers remain undisclosed. The [following addresses was inv
 
 ## Losses
 
-The EXMO security bleach resulted the theft of around $10.5 million. The stolen funds are [distributed as follows](https://www.theblock.co/post/88692/crypto-exchange-exmo-hacked):
+The EXMO security breach resulted in the theft of around $10.5 million. The stolen funds are [distributed as follows](https://www.theblock.co/post/88692/crypto-exchange-exmo-hacked):
 
 - 306.98 BTC
 - 1,882.6 BCH
@@ -43,8 +43,8 @@ The EXMO security bleach resulted the theft of around $10.5 million. The stolen 
 - **December 28, 2017**: EXMO [experienced a targeted DDoS attack](https://www.ibtimes.co.uk/exmo-hack-uk-bitcoin-exchange-hit-ddos-attack-days-after-lead-analyst-was-kidnapped-1653141), temporarily shutting down its website.
 - **December 29, 2017**: [Pavel Lerner was freed after a $1 million ransom was paid](https://www.reuters.com/article/us-ukraine-kidnapping-idUSKBN1EN1QB), with no physical harm inflicted on him. 
 - **December 21, 2020, 02:27 AM UTC**: Hackers [gained access to EXMO's hot wallets](https://blog.merklescience.com/hacktrack/hack-track-exmo-hot-wallets) and transferred the funds under their control.
-- **September 8, 2021**: EXMO [published a post-mortem](https://info.exmo.com/en/notifications/the-2020-exmo-security-incident-resolved/), mentioning that issues have been resolved.
+- **September 8, 2021**: EXMO [published a postmortem](https://info.exmo.com/en/notifications/the-2020-exmo-security-incident-resolved/), mentioning that issues have been resolved.
 
 ## Security Failure Causes
 
-**Private Key Compromise:** The breach of EXMO'hot wallets resulted from a private key compromise. Hackers most likely exploited vulnerabilities in the exchange's infrastructure, gaining access to private keys. 
+**Private Key Compromise:** The breach of EXMO' hot wallets resulted from a private key compromise. Hackers most likely exploited vulnerabilities in the exchange's infrastructure, gaining access to private keys. 
