fix grammar issue

--- a/content/attacks/posts/2021-12-21-Exmo.md
+++ b/content/attacks/posts/2021-12-21-Exmo.md
@@ -47,4 +47,4 @@ The EXMO security breach resulted in the theft of around $10.5 million. The stol
 
 ## Security Failure Causes
 
-**Private Key Compromise:** The breach of EXMO' hot wallets resulted from a private key compromise. Hackers most likely exploited vulnerabilities in the exchange's infrastructure, gaining access to private keys. 
+**Private Key Compromise:** The breach of EXMO's hot wallets resulted from a private key compromise. Hackers most likely exploited vulnerabilities in the exchange's infrastructure, gaining access to private keys. 
