--- a/content/attacks/posts/2019-03-25-CoinBene.md
+++ b/content/attacks/posts/2019-03-25-CoinBene.md
@@ -22,7 +22,7 @@ The identity of the attacker remains unknown. The following addresses were invol
 
 ## Losses
 
-CoinBene lost $105,150,329 worth of various assets. The most valuable [stolen assets breakdown](https://github.com/elementus-io/coinbene-analysis#market-value-of-assets-withdrawn):
+CoinBene lost $105,150,329 worth of various assets. [Breakdown of top 5 stolen assets by value](https://github.com/elementus-io/coinbene-analysis#market-value-of-assets-withdrawn):
 
 - $70,738,770 worth of Maximine Coin
 - $14,252,973 worth of CoinBene Coin
@@ -32,13 +32,13 @@ CoinBene lost $105,150,329 worth of various assets. The most valuable [stolen as
 
 ## Timeline
 
-- **March 20, 2019:** [Bitwise's presentation to the SEC](https://www.sec.gov/comments/sr-nysearca-2019-01/srnysearca201901-5164833-183434.pdf) mentioned CoinBene, with the suspicions of wash trading.
+- **March 20, 2019:** [Bitwise's presentation to the SEC](https://www.sec.gov/comments/sr-nysearca-2019-01/srnysearca201901-5164833-183434.pdf) mentioned suspicions of wash trading on CoinBene.
 - **March 25, 2019, 06:58 PM UTC:** [The first malicious transaction was executed with 16,730 ETH being transferred](https://etherscan.io/tx/0x25b17ec7e8eff42387698f67d7a9482ab175b416cc6ea999041f8b652cd1579c).
 - **March 26, 2019, 00:05 AM UTC:** A hacker [started selling Maximine Coins on EtherDelta](https://etherscan.io/tx/0xb055252a55f17c3f3421838df23dac5f83ad5ca4491e879c342a7ad0d6046a39).
 - **March 26, 2019, 06:20 AM UTC:** CoinBene [announced that the platform was undergoing maintenance](http://web.archive.org/web/20200401054024/https://twitter.com/CoinBene/status/1110531859539070977) due to upgrading the platform wallet. The tweet was deleted later.
 - **March 26, 2019, 01:29 PM UTC:** Crypto expert Nick Schteringard [said on Twitter that the exchange's users reported their wallets being hacked](https://twitter.com/schteringard/status/1110534136698159110) and provided [the attacker's address](https://etherscan.io/address/0x6585329751de1140d68bd6cad1b46ebec1131f75).
 - **March 27, 2019:** Data scientists at Elementus [issued a report suggesting that the fund transfers out of CoinBene's hot wallet reached approximately $105 million](https://www.elementus.io/blog-post/coinbene-analysis).
-- **April 9, 2019:** PeckShield, a blockchain security company, [published a report](https://peckshield.medium.com/coinbene-incident-investigation-report-6d4a3ed3b715) stating that the stolen funds were transferred additionally to the centralized exchanges, including Binance, Bittrex, Huobi, and OKEx.
+- **April 9, 2019:** PeckShield, a blockchain security company, [published a report](https://peckshield.medium.com/coinbene-incident-investigation-report-6d4a3ed3b715) stating that the stolen funds were transferred to centralized exchanges, including Binance, Bittrex, Huobi, and OKEx.
 
 ## Security Failure Causes
 
