grammar fixes for stake article

--- a/content/attacks/posts/2023-09-04-Stake.md
+++ b/content/attacks/posts/2023-09-04-Stake.md
@@ -12,7 +12,7 @@ title: "Stake.com Suffers $41.4 Million Security Breach"
 
 ## Summary
 
-On September 4, 2023, Stake.com, a crypto gambling protocol offering casino games and sports betting, was targeted by the Lazarus Group (also known as APT38), a group of DPRK cyber actors. The group exploited access control vulnerabilities and extracted approximately $41.4 million worth of various digital assets from the platform's hot wallets across Ethereum, Binance Smart Chain (BSC), and Polygon networks. Stake.com reassured users that their funds were safe and all other wallets remained operational. The stolen funds were accurately distributed across multiple addresses and chains. Interestingly some affected addresses were holding over $13 million worth of various tokens as of September 7, 2023.
+On September 4, 2023, Stake.com, a crypto gambling protocol offering casino games and sports betting, was targeted by the Lazarus Group (also known as APT38), a group of DPRK cyber actors. The group exploited access control vulnerabilities and extracted approximately $41.4 million worth of various digital assets from the platform's hot wallets across Ethereum, Binance Smart Chain (BSC), and Polygon networks. Stake.com reassured users that their funds were safe, and all other wallets remained operational. The stolen funds were accurately distributed across multiple addresses and chains. Interestingly, some affected addresses were holding over $13 million worth of various tokens as of September 7, 2023.
 
 ## Attackers
 
@@ -40,8 +40,8 @@ The stolen assets included cryptocurrencies, such as ETH, USDT, USDC, DAI, BNB, 
 - **September 4, 2023, 12:48 PM UTC:** The [first malicious transaction was executed](https://etherscan.io/tx/0x98610e0a20b5ebb08c40e78b4d2271ae1fbd4fc3b8783b1bb7a5687918fad54e) with 6,000 ETH being drained from the Ethereum hot wallet.
 - **September 4, 2023, 05:16 PM UTC:** Stake.com [reported the compromise of its ETH/BSC hot wallets](https://twitter.com/Stake/status/1698746766076588057).
 - **September 4, 2023, 09:25 PM UTC:** Deposit and withdrawals on the platform [were resumed](https://twitter.com/Stake/status/1698809658742637022).
-- **September 6, 2023:** FBI [identifies Lazarus Group ](https://www.fbi.gov/news/press-releases/fbi-identifies-lazarus-group-cyber-actors-as-responsible-for-theft-of-41-million-from-stakecom) as responsible for the theft and provided list of involved addresses.
-- **September 7, 2023:** Ed Craven, the CEO of Stake.com [published a post](https://medium.com/@edcraven22/always-moving-forward-reflections-on-the-recent-stake-com-exploit-431105710a2e), stating that only a small portion of Stake's bankroll was affected.
+- **September 6, 2023:** FBI [identifies Lazarus Group](https://www.fbi.gov/news/press-releases/fbi-identifies-lazarus-group-cyber-actors-as-responsible-for-theft-of-41-million-from-stakecom) as responsible for the theft and provided a list of involved addresses.
+- **September 7, 2023:** Ed Craven, the CEO of Stake.com, [published a post](https://medium.com/@edcraven22/always-moving-forward-reflections-on-the-recent-stake-com-exploit-431105710a2e), stating that only a small portion of Stake's bankroll was affected.
 
 ## Security Failure Causes
 
