Run format action for the 1st time

--- a/content/attacks/posts/2020-09-25-KuCoin.md
+++ b/content/attacks/posts/2020-09-25-KuCoin.md
@@ -18,33 +18,37 @@ On September 26, 2020, KuCoin, a Singapore-based cryptocurrency exchange, [exper
 ## Attackers
 
 A North Korean hacker crew called [Lazarus Group has been accused](https://www.forbes.com/sites/thomasbrewster/2021/02/09/north-korean-hackers-accused-of-biggest-cryptocurrency-theft-of-2020-their-heists-are-now-worth-175-billion/?sh=754242db5b0b) of carrying out the heist. KuCoin recommends blacklisting suspicious [addresses linked to the perpetrators](https://www.kucoin.com/ru/news/en-the-latest-updates-about-the-kucoin-security-incident):
-* ETH: 0xeb31973e0febf3e3d7058234a5ebbae1ab4b8c23
-* BTC:
-- 1NRsEQRg5EjmJHbPUX7YADVPcPzCQBkyU7
-- 12FACbewf5Fy9nmeaLQtm6Ugo5WS8g2Hay
-- 1TYyommJW3uhjhcnHhUSuTQFqSBAxBDPV
-* LTC: LQtFoidy5TmLrPP77MZzgMRffqPsmRfMXE
-* XRP: r3mZvvHVLPtRWAujzBsAoXqH11jhwQZvzY
-* BSV: 15mC7zKbLyErSKzGRHpy6gyqS7GyRpWjEi
-* XLM: GBM3PJWNB5VKNOFXCDTTNXPMUNBMYTLAAPYDIIKLHUGMKX7ZGN2FNGFU
-* USDT: 1NRsEQRg5EjmJHbPUX7YADVPcPzCQBkyU7
-* TRX: TB3j1gUXaLXXq2bstiSMfjQ9R7Yh9DdDgK
+
+- ETH: 0xeb31973e0febf3e3d7058234a5ebbae1ab4b8c23
+- BTC:
+
+* 1NRsEQRg5EjmJHbPUX7YADVPcPzCQBkyU7
+* 12FACbewf5Fy9nmeaLQtm6Ugo5WS8g2Hay
+* 1TYyommJW3uhjhcnHhUSuTQFqSBAxBDPV
+
+- LTC: LQtFoidy5TmLrPP77MZzgMRffqPsmRfMXE
+- XRP: r3mZvvHVLPtRWAujzBsAoXqH11jhwQZvzY
+- BSV: 15mC7zKbLyErSKzGRHpy6gyqS7GyRpWjEi
+- XLM: GBM3PJWNB5VKNOFXCDTTNXPMUNBMYTLAAPYDIIKLHUGMKX7ZGN2FNGFU
+- USDT: 1NRsEQRg5EjmJHbPUX7YADVPcPzCQBkyU7
+- TRX: TB3j1gUXaLXXq2bstiSMfjQ9R7Yh9DdDgK
 
 ## Losses
 
 [The stolen funds](https://blog.chainalysis.com/reports/kucoin-hack-2020-defi-uniswap/) from KuCoin's hot wallets amounted to approximately $281 million. The hackers targeted various cryptocurrencies, including:
-* 1,008 BTC ($10,758,404.86)
-* 11,543 ETH ($4,030,957.90)
-* 19,834,042 USDT-ETH ($19,834,042.14)
-* 18,495,798 XRP ($4,254,547.54)
-* 26,733 LTC ($1,238,539.89)
-* 999,160 USDT ($999,160)
-* $147M worth of ERC-20 tokens
-* $87M of Stellar tokens 
+
+- 1,008 BTC ($10,758,404.86)
+- 11,543 ETH ($4,030,957.90)
+- 19,834,042 USDT-ETH ($19,834,042.14)
+- 18,495,798 XRP ($4,254,547.54)
+- 26,733 LTC ($1,238,539.89)
+- 999,160 USDT ($999,160)
+- $147M worth of ERC-20 tokens
+- $87M of Stellar tokens
 
 ## Timeline:
 
-- **September 26, 2020, 2:51 AM (UTC+8):** [KuCoin received an alert from the risk management system](https://www.kucoin.com/ru/news/en-kucoin-ceo-livestream-recap-latest-updates-about-security-incident) for the first time.  A few more abnormal transactions for ETH and other ERC-20 took place soon, all from the same ETH wallet address. 
+- **September 26, 2020, 2:51 AM (UTC+8):** [KuCoin received an alert from the risk management system](https://www.kucoin.com/ru/news/en-kucoin-ceo-livestream-recap-latest-updates-about-security-incident) for the first time. A few more abnormal transactions for ETH and other ERC-20 took place soon, all from the same ETH wallet address.
 - **September 26, 2020, 4:20 AM (UTC+8):** The KuCoin operation team closed the server of the wallet. The KuCoin wallet team started to transfer the remaining assets from the hot wallet to cold storage. KuCoin started to investigate the incident.
 - **September 26, 2020, 4:50 AM (UTC+8):** The KuCoin wallet team transferred most of the remaining assets from the hot wallet to cold storage.
 - **September 26, 2020, 10:41 AM (UTC+8):** The KuCoin team released [the official announcement about the security incident](https://www.kucoin.com/ru/news/en-kucoin-security-incident-update).
@@ -56,6 +60,7 @@ A North Korean hacker crew called [Lazarus Group has been accused](https://www.f
 ## Security Failure Causes
 
 On the official website, the KuCoin team explained that the hack was made because of a leakage of the private keys of KuCoin hot wallets. The leakage could became possible due to [several reasons](https://hacken.io/insights/kucoin-september-2020-hack-hacken-research/):
-* Malicious actions of responsible employees: this could have been done by someone from the exchange staff who had the appropriate access.
-* Attack on web infrastructure: the attacker could gain access to the exchange’s hot wallet services. 
-* Social engineering attack: the hackers could obtain access to private keys as a result of a phishing attack by using exploits, viruses, and backdoors on employees who had access to private keys.
+
+- Malicious actions of responsible employees: this could have been done by someone from the exchange staff who had the appropriate access.
+- Attack on web infrastructure: the attacker could gain access to the exchange’s hot wallet services.
+- Social engineering attack: the hackers could obtain access to private keys as a result of a phishing attack by using exploits, viruses, and backdoors on employees who had access to private keys.
