--- a/content/attacks/posts/2023-04-28-0vix.md
+++ b/content/attacks/posts/2023-04-28-0vix.md
@@ -1,23 +1,24 @@
 ---
 date: 2023-04-28
-target-entities: 
-- 0vix
+target-entities:
+  - 0vix
 entity-types:
-- DeFi
-- Lending Platform
+  - DeFi
+  - Lending Platform
 attack-types:
-- Smart Contract Exploit
-- Flash Loan Attack
+  - Smart Contract Exploit
+  - Flash Loan Attack
 title: "0vix Hack: $2 Million Stolen in Exploit"
 ---
 
 ## Summary
 
-On April 28, 2023, 0vix, a DeFi protocol, was hacked for $2 million in USDC. The attacker executed a sophisticated exploit that involved flash loans, price manipulation, and a self-executed toxic liquidation spiral. All of this occurred within one transaction composed of 278 events. 
+On April 28, 2023, 0vix, a DeFi protocol, was hacked for $2 million in USDC. The attacker executed a sophisticated exploit that involved flash loans, price manipulation, and a self-executed toxic liquidation spiral. All of this occurred within one transaction composed of 278 events.
 
 ## Attackers
 
-The attackers remain unidentified. The attacker(s) utilized the following Polygon addresses: 
+The attackers remain unidentified. The attacker(s) utilized the following Polygon addresses:
+
 - [0x702ef63881b5241ffb412199547bcd0c6910a970](https://polygonscan.com/address/0x702ef63881b5241ffb412199547bcd0c6910a970)
 - [0x407feaec31c16b19f24a8a8846ab4939ed7d7d57](https://polygonscan.com/address/0x407feaec31c16b19f24a8a8846ab4939ed7d7d57)
 - [0x49c6dd832d76fb9dd0dfd3a889775faa51af095c](https://polygonscan.com/address/0x49c6dd832d76fb9dd0dfd3a889775faa51af095c)
@@ -30,9 +31,8 @@ $2 million in USDC
 
 - **April 28, 2023, 10:45:16 AM +UTC** Attacker's [transaction](https://polygonscan.com/tx/0x10f2c28f5d6cd8d7b56210b4d5e0cece27e45a30808cd3d3443c05d4275bb008)
 - **April 28, 2023, 11:54 AM +UTC:** 0VIX [announced](https://twitter.com/0vixProtocol/status/1651917875672670209) a temporary suspension of its POS and zkEVM operations due to an exploit
-- **April 29, 2023, 03:14:47 PM +UTC:** 0VIX Protocol [sent a message to the attacker]((https://etherscan.io/tx/0x2b447c193617e96339fce9d4ef4c4b5c91adeb59fcda2f0b2b9c9a59235ce786)), saying that if no funds are received by 8:00 a.m. UTC on May 1, 2023, law enforcement procedures will begin.
+- **April 29, 2023, 03:14:47 PM +UTC:** 0VIX Protocol [sent a message to the attacker](<(https://etherscan.io/tx/0x2b447c193617e96339fce9d4ef4c4b5c91adeb59fcda2f0b2b9c9a59235ce786)>), saying that if no funds are received by 8:00 a.m. UTC on May 1, 2023, law enforcement procedures will begin.
 - **May 11,2023:** 0VIX [published exploit Post-Mortem](https://0vixprotocol.medium.com/0vix-exploit-post-mortem-15c882dcf479)
-
 
 ## Security Failure Causes
 
