fix language and add tags

--- a/content/attacks/posts/2023-09-12-CoinEx.md
+++ b/content/attacks/posts/2023-09-12-CoinEx.md
@@ -1,6 +1,9 @@
 ---
 date: 2023-09-12
 target-entities: CoinEx
+tags:
+  - Lazarus Group
+  - North Korea
 entity-types:
 - Exchange
 - Custodian
@@ -16,7 +19,7 @@ On September 12, 2023, CoinEx, a crypto trading platform operating on various ch
 
 ## Attackers
 
-The Lazarus Group is suspected for the theft. The attackers used the following addresses to transfer the funds:
+North Korean Lazarus Group is suspected to be behind the theft. The attackers used the following addresses to transfer the funds:
 
 - **Ethereum:**
     - [0xCC1AE485b617c59a7c577C02cd07078a2bcCE454](https://etherscan.io/address/0xCC1AE485b617c59a7c577C02cd07078a2bcCE454)
